16968
```scala
import scala.reflect.makro.Context

object Macros {
  def impl[T](c: Context) = c.literalUnit

  def foo[T] = macro impl[T]
}
```
```scala
import Macros._

object Test extends App {
  foo
}
```
```scala
Test_2.scala:4: error: macro has not been expanded
  foo
  ^
one error found
```
